[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "mlops"
authors = ["Afonsolelis <66492757+afonsolelis@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mlops"}]

[tool.poetry.dependencies]
python = ">=3.11"
flask = ">=3.1.0,<4.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
gunicorn = ">=23.0.0,<24.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
